--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,3 +23,15 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:20.0.0'
 }
+
+repositories {
+    mavenCentral()
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.spotify.sdk:spotifysdk:1.0.0-beta4@aar' // NOTE: Version must match!
+}
