--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo2"
+        android:icon="@drawable/logosymbolwhite"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainDrawer"
