junk broke everything

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="bebunnies.bebunnies" >
+    package="bobblebeat.BobbleBeat;" >
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -8,7 +8,7 @@
         android:icon="@drawable/logosymbolwhite"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainDrawer"
+            android:name="bobblebeat.BobbleBeat.MainDrawer"
             android:label="@string/app_name"
             android:launchMode="singleInstance" >
             <intent-filter>
