--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile 'com.android.support:support-v4:20.0.0'
     compile files('libs/jEN.jar')
     compile files('libs/json_simple-1.1.jar')
+    compile files('libs/JTransforms-3.0.jar')
+    compile files('libs/JLargeArrays-1.2.jar')
 }
 
 repositories {
